apps/base/stac/stac-browser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stac-browser
  namespace: stac
spec:
  selector:
    matchLabels:
      app: stac-browser
  template:
    metadata:
      labels:
        app: stac-browser
    spec:
      containers:
        - name: stac-browser
          image: ghcr.io/radiantearth/stac-browser:3.2.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 0.5
              memory: 500Mi
            limits:
              cpu: 1
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
