apps/base/stac/stac-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stac-fastapi
  namespace: stac
spec:
  selector:
    matchLabels:
      app: stac-fastapi
  template:
    metadata:
      labels:
        app: stac-fastapi
    spec:
      containers:
        - name: stac-fastapi
          image: ghcr.io/stac-utils/stac-fastapi-pgstac:3.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 2Gi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
