apps/base/stac/stac-browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stac-browser
  namespace: stac
spec:
  selector:
    app: stac-browser
  ports:
    - port: 8080
      targetPort: 8080
